feat: Upgrade Gwy dashboard with charts and improved layout

--- a/_gwy_logs/2025-01-01-guide.md
+++ b/_gwy_logs/2025-01-01-guide.md
@@ -40,3 +40,10 @@ title: "今天攻克了申论大作文" # [可选] 日志标题
 *   **极深绿**: > 6 小时 (像今天一样！)
 
 祝您备考顺利，星光不负赶路人！
+
+---
+
+### 未来功能规划 (Right Sidebar Ideas)
+
+*   **历史上的今天**: 如果数据积累够多，可以显示去年的今天学了什么。
+*   **高频标签云**: 显示您复习最多的科目或知识点。
