refactor: Update Gwy start date and add image guide

--- a/_gwy_logs/2025-01-01-guide.md
+++ b/_gwy_logs/2025-01-01-guide.md
@@ -47,3 +47,15 @@ title: "今天攻克了申论大作文" # [可选] 日志标题
 
 *   **历史上的今天**: 如果数据积累够多，可以显示去年的今天学了什么。
 *   **高频标签云**: 显示您复习最多的科目或知识点。
+
+---
+
+### 如何插入图片？
+
+为了保持项目整洁，备考日记的图片请统一存放在 `img/gwy/` 目录下。
+
+**引用方式**:
+```markdown
+![我的笔记截图](/img/gwy/my-note.jpg)
+```
+建议在 `img/gwy/` 下按年份或月份建立子文件夹，例如 `img/gwy/2026/01/`。
