feat(gwy): Create reusable image row component and update docs

--- a/_gwy_logs/2025-12-20-guide.md
+++ b/_gwy_logs/2025-12-20-guide.md
@@ -52,14 +52,41 @@ title: "今天攻克了判断推理"
 *   **科目分布**: 行测 3.5h, 申论 1.5h。
 *   **热力图**: 2026-01-02 的格子会点亮。
 
-#### 2. 如何插入图片？
+### 如何插入图片？
 
 为了保持项目整洁，备考日记的图片请统一存放在 `img/gwy/` 目录下。
 
-**引用方式**:
+**引用方式 (单张图片)**:
 ```markdown
 ![我的笔记截图](/img/gwy/my-note.jpg)
 ```
+
+---
+
+### 如何插入并排图片？
+
+我们创建了一个可以并排显示 2-3 张图片的组件。
+
+**使用方法**:
+在需要插入图片的地方，使用下面的代码，并换成你自己的图片路径。
+
+**两张图并排**:
+```liquid
+{% raw %}{% include gwy_image_row.html 
+    img1="/img/gwy/your_image_1.jpg" 
+    img2="/img/gwy/your_image_2.jpg" 
+%}{% endraw %}
+```
+
+**三张图并排**:
+```liquid
+{% raw %}{% include gwy_image_row.html 
+    img1="/img/gwy/pic1.jpg" 
+    img2="/img/gwy/pic2.jpg" 
+    img3="/img/gwy/pic3.jpg" 
+%}{% endraw %}
+```
+
 
 祝您备考顺利，星光不负赶路人！
 
