--- a/_gwy_logs/2025-12-31.md
+++ b/_gwy_logs/2025-12-31.md
@@ -6,7 +6,6 @@ tags: [备考前一天]
 
 今天是备考的前一天，也是2025年的最后一天，从今天开始算起，还有差不多333天的时间。不知道该写些什么，本来应该记录下此时的心情，记录下对未来不到一年备考时间感到紧张的心情及备考的决心，但刚刚外面跨年的热闹气氛中回家，人山人海的场景还在眼前，所有不快的心情早已烟消云散。三百天后再见时，希望能有“春风得意马蹄疾，一日看尽长安花”的潇洒。附上夜游图。
 
-![yeyou_1](/img/gwy/yeyou_1.jpg) 
+{% include gwy_image_row.html img1="/img/gwy/yeyou_1.jpg" img2="/img/gwy/yeyou_2.jpg" %}
 
-![yeyou_2](/img/gwy/yeyou_2.jpg) 
 
