docs(gwy): Add LLM configuration guide for weekly reports

--- a/_gwy_logs/2025-12-20-guide.md
+++ b/_gwy_logs/2025-12-20-guide.md
@@ -116,3 +116,51 @@ tags: [刷题, 复盘]
 ---
 
 祝您备考顺利，星光不负赶路人！
+
+---
+
+### 如何配置 AI 周报？
+
+本系统支持每周自动调用大语言模型（LLM），分析您一周的学习记录和日记，生成一份专业的周报。要启用此功能，您需要完成以下配置：
+
+#### 1. 在 GitHub 设置 Secrets
+
+为了安全地存储您的 API 密钥，请在您的 GitHub 仓库中进行如下设置：
+
+1.  进入仓库主页，点击 **Settings** -> **Secrets and variables** -> **Actions**。
+2.  点击 **New repository secret** 按钮。
+3.  **Name**: `LLM_API_KEY`
+4.  **Secret**: 粘贴您的 API 密钥（例如，OpenAI 的 `sk-...`）。
+5.  **(可选)** 如果您使用代理服务，请再添加一个 Secret：
+    *   **Name**: `LLM_API_BASE_URL`
+    *   **Secret**: 您的代理 URL。
+
+#### 2. 修改 `weekly_report.yml` 工作流
+
+打开 `.github/workflows/weekly_report.yml` 文件，找到 `Generate Weekly Report` 这个步骤，并修改 `env` 部分，使其能读取您设置的 Secret。
+
+**修改前**:
+```yaml
+env:
+  # 您需要在这里设置您的 LLM API 密钥
+  # OPENAI_API_KEY: ${{ secrets.YOUR_LLM_API_KEY_SECRET }} 
+  # ...
+```
+
+**修改后 (以 OpenAI 为例)**:
+```yaml
+env:
+  OPENAI_API_KEY: ${{ secrets.LLM_API_KEY }}
+  # 如果您用了代理，也取消这一行的注释
+  # OPENAI_API_BASE: ${{ secrets.LLM_API_BASE_URL }}
+```
+
+#### 3. 修改 `weekly_summary_generator.py` (激活真实调用)
+
+打开 `crawlers/weekly_summary_generator.py`，找到 `get_llm_summary` 函数。
+
+1.  **取消真实调用的注释**: 找到 `response = client.chat.completions.create(...)` 和 `summary = response.choices[0].message.content` 这几行，并取消它们的注释。
+2.  **删除或注释掉示例周报**: 找到 `summary = """..."""` 这个大的文本块，并将其删除或用 `"""` 注释掉。
+3.  **(可选)** 您也可以在这里修改想用的模型，例如 `model="gpt-4o"`。
+
+完成以上步骤后，每周日的自动周报功能就会正式启用。
