docs(gwy): Update guide with detailed instructions for changing LLM

--- a/_gwy_logs/2025-12-20-guide.md
+++ b/_gwy_logs/2025-12-20-guide.md
@@ -119,48 +119,60 @@ tags: [刷题, 复盘]
 
 ---
 
-### 如何配置 AI 周报？
+### 如何配置与修改 AI 周报？
 
-本系统支持每周自动调用大语言模型（LLM），分析您一周的学习记录和日记，生成一份专业的周报。要启用此功能，您需要完成以下配置：
+本系统会在**每周六晚 23:00** 自动运行，调用大语言模型（LLM）为您生成周报。要让它真正工作并使用您期望的模型，请按以下步骤操作：
 
-#### 1. 在 GitHub 设置 Secrets
+#### 1. 在 GitHub 设置 Secrets (只需一次)
 
-为了安全地存储您的 API 密钥，请在您的 GitHub 仓库中进行如下设置：
+这是为了安全地存储您的 API 密钥。
 
-1.  进入仓库主页，点击 **Settings** -> **Secrets and variables** -> **Actions**。
+1.  进入您的 GitHub 仓库主页，点击 **Settings** -> **Secrets and variables** -> **Actions**。
 2.  点击 **New repository secret** 按钮。
 3.  **Name**: `LLM_API_KEY`
-4.  **Secret**: 粘贴您的 API 密钥（例如，OpenAI 的 `sk-...`）。
+4.  **Secret**: 粘贴您的 API 密钥。
 5.  **(可选)** 如果您使用代理服务，请再添加一个 Secret：
     *   **Name**: `LLM_API_BASE_URL`
     *   **Secret**: 您的代理 URL。
 
-#### 2. 修改 `weekly_report.yml` 工作流
+*注：此设置与博客文章自动总结的爬虫共用，设置一次即可。*
 
-打开 `.github/workflows/weekly_report.yml` 文件，找到 `Generate Weekly Report` 这个步骤，并修改 `env` 部分，使其能读取您设置的 Secret。
+#### 2. 修改 `weekly_report.yml` 工作流 (只需一次)
 
-**修改前**:
-```yaml
-env:
-  # 您需要在这里设置您的 LLM API 密钥
-  # OPENAI_API_KEY: ${{ secrets.YOUR_LLM_API_KEY_SECRET }} 
-  # ...
-```
+打开 `.github/workflows/weekly_report.yml` 文件，确保 `env` 部分正确引用了您设置的 Secrets。
 
-**修改后 (以 OpenAI 为例)**:
 ```yaml
 env:
   OPENAI_API_KEY: ${{ secrets.LLM_API_KEY }}
-  # 如果您用了代理，也取消这一行的注释
-  # OPENAI_API_BASE: ${{ secrets.LLM_API_BASE_URL }}
+  OPENAI_API_BASE: ${{ secrets.LLM_API_BASE_URL }}
 ```
 
-#### 3. 修改 `weekly_summary_generator.py` (激活真实调用)
+#### 3. 修改 `weekly_summary_generator.py` (核心)
 
-打开 `crawlers/weekly_summary_generator.py`，找到 `get_llm_summary` 函数。
+这是激活真实调用和**更换模型**的地方。打开 `crawlers/weekly_summary_generator.py`，找到 `get_llm_summary` 函数。
 
-1.  **取消真实调用的注释**: 找到 `response = client.chat.completions.create(...)` 和 `summary = response.choices[0].message.content` 这几行，并取消它们的注释。
-2.  **删除或注释掉示例周报**: 找到 `summary = """..."""` 这个大的文本块，并将其删除或用 `"""` 注释掉。
-3.  **(可选)** 您也可以在这里修改想用的模型，例如 `model="gpt-4o"`。
+1.  **激活真实调用**:
+    *   找到 `response = client.chat.completions.create(...)` 和 `summary = response.choices[0].message.content` 这几行，**取消它们的注释**。
+    *   找到 `summary = """..."""` 这个大的示例周报文本块，并将其**删除或用 `"""` 注释掉**。
 
-完成以上步骤后，每周日的自动周报功能就会正式启用。
+2.  **如何替换模型**:
+    *   在 `client.chat.completions.create(...)` 这一段中，找到 `model="..."` 这一行。
+    *   将引号中的模型名称，替换为您想使用的任何模型。
+
+    **修改前**:
+    ```python
+    # response = client.chat.completions.create(
+    #     model="qwen2.5-max",
+    #     ...
+    # )
+    ```
+
+    **修改后 (例如换成 gpt-4o)**:
+    ```python
+    response = client.chat.completions.create(
+        model="gpt-4o",
+        ...
+    )
+    ```
+
+完成以上步骤后，您的 AI 周报系统就会按时、使用您指定的模型，为您生成独一无二的分析报告。
